# axctl

./: Cargo.toml  PKGBUILD  README.md  axctl-0.1.0-1-x86_64.pkg.tar.zst  axctl-debug-0.1.0-1-x86_64.pkg.tar.zst
src/: Cargo.toml  args.rs  main.rs
src/internal/: utils.rs
src/operations/: grubMenuToggle.rs  mod.rs
src/src/: args.rs  main.rs
src/src/internal/: utils.rs
src/src/operations/: apply_default_sleex_keybinds.rs  change_hostname.rs  device_info.rs  load_sleex_user_config.rs  load_style_config.rs  mod.rs  networking.rs  splash_screen_toggle.rs  update_releases.rs
