[package]
name = "axctl"
version = "0.3.2"
description = "Command line tool for managing AxOS"
edition = "2021"

[dependencies]
clap = { version = "4.5.38", features = ["derive", "wrap_help"] }
libc = "0.2.172"

[dependencies.tokio]
version = "1.21.0"
features = ["process", "macros", "rt-multi-thread", "tracing"]
